css/style.css
/*--
Author: Jay Xu && Emily Wang
--*/
body{
	margin:0;
	font-family: 'Raleway', sans-serif;
}
body a{
	transition: 0.5s all ease;
	-webkit-transition: 0.5s all ease;
	-moz-transition: 0.5s all ease;
	-o-transition: 0.5s all ease;
	-ms-transition: 0.5s all ease;
}
h1,h2,h3,h4,h5,h6{
	margin:0;			   
}
p{
	margin:0;
}
ul,label{
	margin:0;
	padding:0;
}
body a:hover{
	text-decoration:none;
}


/*Styles for the tags group in the portfolio page*/

.tags {
  margin-top: 20px;
}

.tag {
  margin: 0 0 1em 0;
  padding: 5px;
  list-style: none;
}

.tag li {
  display: inline-block;
}

.tag a {
  display: inline-block;
  line-height: 30px;
  font-size: 90%;
  position: relative;
  margin: 0 20px 8px 6px;
  padding: 0 13px 0 15px;
  background: #ffbbe0;
  text-transform: uppercase;
  color: #fff;
  border-radius: 0 2px 2px 0;
  font-weight: 500;
}

.tag a:before {
  content: "";
  float: left;
  position: absolute;
  top: 0px;
  left: -11px;
  width: 0;
  height: 0;
  border-right-color: #ffbbe0;
  border-style: solid;
  border-width: 15px 11px 15px 0;
}

.tag a:after {
  content: "";
  position: absolute;
  top: 11px;
  left: 0;
  float: left;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background: #fff;
}


/*--header-menu--*/
button#showRightPush {
	background: none;
	border: none;
	color: #ffffff;
	
}
button#showRightPush img {
	padding-left: 8px;
}

img {
  max-width: 100%;
  height: auto;
}


.wrapper {
  width: 84%;
  margin: 0 auto;
}

.extra-padding {
  margin-top: 5em;
  margin-bottom: 5em;
}
/*--header--*/
.logo {
  float: left;
}
.top-nav{
	float:right;
	margin-top: 15px;
}
.top-header{
margin-top:50px;
}
.right_bt span{
	width: 37px;
    height: 25px;
	display: block;
	background: url(../images/menu.png) no-repeat 0px 0px;
}
.box{
	position:absolute;
	top:-1200px;
	width:100%;
	margin:auto;
	padding:0px;
	z-index:999999;
	text-align:center;
	left:0px;
 }
.box_content_center{
	background:rgba(0, 0, 0, 0.22);
}
a.boxclose{
	cursor: pointer;
	text-align: center;
	display: block;
	position: absolute;
	top: 19px;
	right: 290px;
 }
 #activator {
}
.menu_box_list{
	display: inline-block;
	padding:30px 0;
}
.menu_box_list ul li {
	display:inline-block;
	  margin: 0 10px;
}
.menu_box_list li a{
	color: #FFF;
	font-size: 16px;
	text-transform: uppercase;
	font-family: 'Lato', sans-serif;
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
	font-weight: 600;
}
.menu_box_list li a:hover{
	color:#000000;
	text-decoration: none;
}
.menu_box_list li a > i > img{
	vertical-align:middle;
}
.boxclose span{
	width:58px;
	height:73px;
	display:inline-block;
	background: url(../images/into.png) no-repeat 0px 0px;
}
/*--/header--*/
/*--banner--*/
.banner{
	background: url(../images/homepage-bg.jpg) no-repeat 0px 0px;
	background-size: cover;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	text-align: center;
	min-height:750px;
}

.banner_project {
  background: url(../images/project-bg.jpg) no-repeat 0px 0px;
}

.image_size {
  width: 600px; 
}

.image_phone {
  width: 300px; 
  margin-top: -130px;
}


.banner-info{
  width:65%;
  margin: 141px auto 0 auto;
}

.banner_width {
  width:100%;
  margin: 161px auto 0 auto;
}
.banner h1{
font-size:34px;
font-weight:800;
color:#ffffff;
margin:35px 0 15px 0;
letter-spacing: 15px;
}

.banner_width h1 {
  font-size: 38px;
  letter-spacing: 5px;
  font-family: 'Verdana';
}

.banner h2{
  font-size: 50px;
  font-weight: 300;
  color: #ffffff;
  margin: 15px 0 45px 0;
}

.banner_width h2 {
  font-size: 32px;
  font-family: 'Verdana';
}
.banner-right a{
text-decoration:none;
color:#ffffff;
font-size:16px;
font-weight:500;
padding:16px 20px;
border:2px solid #fff;
}
.banner-right a:hover{
border:2px solid #fc9fe4;
}
.banner-left{
float:left;
}
.banner-right{
float:right;
}
.border {
  background: #ff7bc3;
  width: 70%;
  margin: 0 auto;
  padding: 1px;
}
/*--//banner--*/
/*--about--*/
.about{
padding:60px 0 25px 0;
}
.about h3{
margin:0;
color:#2b2b2b;
font-size:36px;
font-weight:500;
letter-spacing: 18px;
}
.strip{
  margin: 28px 0 0px 0;
}
.about p{
margin:45px 0 0 0;
color:#888b90;
font-size:18px;
font-family: 'Lato', sans-serif;
line-height:1.8em;
letter-spacing: 1px;
}
.about ul{
padding:0;
margin:75px 0 20px 0;
}
.about ul li{
list-style-type:none;
display:inline-block;
margin-right:25px;
}
.about ul li a.fb{
background: url(../images/sprites2.png) no-repeat -1px 0;
width:72px;
height:72px;
display:block;
}
.about ul li a.twit{
background: url(../images/sprites2.png) no-repeat -336px -4px;
width:72px;
height:72px;
display:block;
}
.about ul li a.twit:hover{
background: url(../images/sprites2.png) no-repeat -337px -88px;
}
.about ul li a.in{
background: url(../images/sprites2.png) no-repeat -255px -3px;
width:72px;
height:72px;
display:block;
}
.about ul li a.in:hover{
background: url(../images/sprites2.png) no-repeat -256px -89px;
}
.about ul li a.insta{
background: url(../images/sprites2.png) no-repeat -172px -3px;
width:72px;
height:72px;
display:block;
}
.about ul li a.insta:hover{
background: url(../images/sprites2.png) no-repeat -172px -89px;
}
.about ul li a.goog{
background: url(../images/sprites2.png) no-repeat -85px -2px;
width:72px;
height:72px;
display:block;
}
.about ul li a.goog:hover{
background: url(../images/sprites2.png) no-repeat -87px -87px;
}
.about ul li a.fb:hover{
background: url(../images/sprites2.png) no-repeat 0 -88px;
}
/*--//about--*/
/*--my skill--*/
.my-skills{
	background: #ffbbe0;
	padding: 60px 0;
}
.my-skills h3{
margin:0;
color:#ffffff;
font-size:36px;
font-weight:500;
letter-spacing: 18px;
}
.skill-grids{
margin-top:50px;
}
.skills-grid p{
margin:20px 0 0 0;
color:#ffffff;
font-size:16px;
font-weight:600;
text-transform:uppercase;
}
.circle{
color:#ffffff;
font-size:36px;
}
span.circles-number {
  font-size: 36px;
}
span.circles-text {
  font-size: 36px;
}
/* ... */

